# sokuri

./: .gitignore  AssetWise_Cowork_Handoff.md  DEPLOY.md  HANDOFF_PROMPT.md  KATAZUKE_REDESIGN_PLAN.md  NEW_PC_MIGRATION.md  PLAN_KATADZUKE_VENDOR_ENGINE.md  PROJECT_STATE.md  README.md  auto-push.ps1  docker-compose.yml  push-katadzuke.ps1  render.yaml  setup-github.ps1  website-preview.html
.tools/: push.ps1  (+9 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  er_diagram.mmd  pyproject.toml  railway.json  run_local_e2e.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_defect_evidence.py  0003_add_albums.py  0004_katadzuke_schema.py  0005_auth_tables.py  0005_invites_lot_name.py  0006_vendor_status.py  0007_operator_terms_agreement.py  0008_operator_applications_and_pending_status.py  0009_messages_schedule_and_operator_profiles.py  0010_operator_applications_client_ip.py  0011_line_user_id.py  0012_fix_status_defaults.py  0012_user_profile_fields.py  0013_user_profile_fields.py
backend/app/: config.py  main.py  schemas.py  schemas_katadzuke.py
backend/app/api/: deps.py  rate_limit_deps.py
backend/app/api/v1/: router.py
backend/app/core/: client_ip.py  crypto.py  log_throttle.py  rate_limit.py  request_ip.py  security.py
backend/app/db/: base.py  session.py
backend/app/services/: affiliate.py  line_notify.py  message_guard.py  notify.py  notify_dispatch.py  routing.py  seed.py  storage.py  summary.py  vision.py
backend/tests/: conftest.py  test_account_api.py  test_affiliate.py  test_api.py  test_config.py  test_katadzuke_api.py  test_line_integration.py  test_main.py  test_message_guard.py  test_rate_limit.py  test_rate_limit_api.py  test_routing.py
(+213 files in other folders)
