[project]
name = "assetwise-backend"
version = "0.1.0"
description = "カタヅケ — 全カテゴリ横断リユース・アグリゲーター バックエンド"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "google-genai>=1.0",
    "pyjwt>=2.9",
    "email-validator>=2.1",
    "httpx>=0.27",
    "cryptography>=43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

# packages=["app"] の明示列挙はサブパッケージ(app.api/app.db/app.core/app.services)を
# site-packages にインストールしない不完全指定（現在は WORKDIR=/app の cwd が sys.path に
# 入るため潜在化）。find 方式でサブパッケージまで確実に含める。
[tool.setuptools.packages.find]
include = ["app*"]
